--- a/TradeMaster6000/Client/TradeMaster6000.Client.csproj
+++ b/TradeMaster6000/Client/TradeMaster6000.Client.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.5" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web.Extensions" Version="5.0.0-preview9.20513.1" />
+    <PackageReference Include="Tech.Zerodha.KiteConnect" Version="3.0.7" />
   </ItemGroup>
 
   <ItemGroup>
