--- a/TradeMaster6000/Server/TradeMaster6000.Server.csproj
+++ b/TradeMaster6000/Server/TradeMaster6000.Server.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
+    <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
     <PackageReference Include="Tech.Zerodha.KiteConnect" Version="3.0.7" />
   </ItemGroup>
 
