--- a/TradeMaster6000/Shared/TradeMaster6000.Shared.csproj
+++ b/TradeMaster6000/Shared/TradeMaster6000.Shared.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.6" />
+    <PackageReference Include="Tech.Zerodha.KiteConnect" Version="3.0.7" />
   </ItemGroup>
 
 </Project>
