--- a/TradeMaster6000/Server/TradeMaster6000.Server.csproj
+++ b/TradeMaster6000/Server/TradeMaster6000.Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="5.7.0" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.23" />
     <PackageReference Include="Hangfire.Core" Version="1.7.23" />
     <PackageReference Include="Hangfire.MySqlStorage" Version="2.0.3" />
